{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 8,
  "lineage": "1f1e3ef8-f7d6-bb39-7c8f-e22d1e8f5136",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0fd6240f599091088",
            "arn": "arn:aws:ec2:us-east-1:123877604025:instance/i-06064a70f87887823",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06064a70f87887823",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0538f4a008d5a0dd9"
              }
            ],
            "primary_network_interface_id": "eni-0538f4a008d5a0dd9",
            "private_dns": "ip-10-0-1-34.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.34",
            "public_dns": "ec2-52-207-227-218.compute-1.amazonaws.com",
            "public_ip": "52.207.227.218",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Day": "03",
                  "ManagedBy": "terraform",
                  "Project": "terraweek-2026"
                },
                "tags_all": {
                  "Day": "03",
                  "ManagedBy": "terraform",
                  "Project": "terraweek-2026"
                },
                "throughput": 125,
                "volume_id": "vol-0d596b7e5dfbc2549",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07095d5980d2828d4",
            "tags": {
              "Name": "terraweek-web"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-web",
              "Project": "terraweek-2026"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0df01cea415f863a0"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "i-06064a70f87887823",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123877604025:internet-gateway/igw-080f3429a291886fb",
            "id": "igw-080f3429a291886fb",
            "owner_id": "123877604025",
            "region": "us-east-1",
            "tags": {
              "Name": "terraweek-igw"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-igw",
              "Project": "terraweek-2026"
            },
            "vpc_id": "vpc-063d8333535c346a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "igw-080f3429a291886fb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123877604025:route-table/rtb-07802c6776cbdc783",
            "id": "rtb-07802c6776cbdc783",
            "owner_id": "123877604025",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-080f3429a291886fb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraweek-public-rt"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-public-rt",
              "Project": "terraweek-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-063d8333535c346a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "rtb-07802c6776cbdc783",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9ba2a3b2d949869",
            "region": "us-east-1",
            "route_table_id": "rtb-07802c6776cbdc783",
            "subnet_id": "subnet-07095d5980d2828d4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "rtbassoc-0c9ba2a3b2d949869",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123877604025:security-group/sg-0df01cea415f863a0",
            "description": "Allow HTTP inbound and all outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0df01cea415f863a0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraweek-web-sg",
            "name_prefix": "",
            "owner_id": "123877604025",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraweek-web-sg"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-web-sg",
              "Project": "terraweek-2026"
            },
            "timeouts": null,
            "vpc_id": "vpc-063d8333535c346a4"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "sg-0df01cea415f863a0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123877604025:subnet/subnet-07095d5980d2828d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07095d5980d2828d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123877604025",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "terraweek-public-subnet"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-public-subnet",
              "Project": "terraweek-2026"
            },
            "vpc_id": "vpc-063d8333535c346a4"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "subnet-07095d5980d2828d4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123877604025:vpc/vpc-063d8333535c346a4",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b277c4881813e4c",
            "default_route_table_id": "rtb-062a8e22ec76683c7",
            "default_security_group_id": "sg-054af659701e4528a",
            "dhcp_options_id": "dopt-07ed03011c9b5e3da",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063d8333535c346a4",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062a8e22ec76683c7",
            "owner_id": "123877604025",
            "region": "us-east-1",
            "tags": {
              "Name": "terraweek-vpc"
            },
            "tags_all": {
              "Day": "03",
              "ManagedBy": "terraform",
              "Name": "terraweek-vpc",
              "Project": "terraweek-2026"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "123877604025",
            "id": "vpc-063d8333535c346a4",
            "region": "us-east-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}